--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -22,10 +22,18 @@ jobs:
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
-    - name: Build Release APK
-      run: ./gradlew assembleRelease
+    #- name: Build Release APK
+    #  run: ./gradlew assembleRelease
+    #- name: Releasing using Hub
+    #  uses: kyze8439690/action-release-releaseapk@master
+    #  env:
+    #   GITHUB_TOKEN: ${{ secrets.TOKEN }}
+    #   APP_FOLDER: app
+    - name: Build Debug APK
+      run: ./gradlew assembleDebug
     - name: Releasing using Hub
-      uses: kyze8439690/action-release-releaseapk@master
+      uses: ShaunLWM/action-release-debugapk@master
       env:
        GITHUB_TOKEN: ${{ secrets.TOKEN }}
        APP_FOLDER: app
+       RELEASE_TITLE: New Build
