--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -24,9 +24,10 @@ jobs:
       run: chmod +x gradlew
     - name: Build Debug APK
       run: ./gradlew assembleDebug
+    #- name: Build Release APK
+    #  run: ./gradlew assembleRelease
     - name: Releasing using Hub
-      uses: ShaunLWM/action-release-debugapk@master
+      uses: videejay/action-release-releaseapk@master
       env:
        GITHUB_TOKEN: ${{ secrets.TOKEN }}
        APP_FOLDER: app
-       RELEASE_TITLE: New Build
